Add #universal-types and #type-reconstruction extensions support, Fix type-checking for cast as